--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>bank</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bank</name>
-	<description>Demo project for Spring Boot</description>
+	<description>bank service project</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
